--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,7 @@ plugins {
 
 android {
     namespace 'com.diamon.megaprocessor'
-    compileSdk {
-        version = release(36)
-    }
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.diamon.megaprocessor"
