feat: Implement initial Megaprocessor ASM Android application with native assembler integration, UI, syntax highlighting, and file management features.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.diamon.megaprocessor'
+    namespace 'com.diamon.guia'
     compileSdk 36
 
     defaultConfig {
-        applicationId "com.diamon.megaprocessor"
+        applicationId "com.diamon.guia"
         minSdk 23
         targetSdk 36
         versionCode 1
