--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:hardwareAccelerated="true"
         android:largeHeap="true">
         <activity
-            android:name=".MainActivity"
+            android:name="com.diamon.guia.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
