--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PrivacyPolicyActivity"
+            android:label="@string/menu_privacy"
+            android:theme="@style/Theme.MegaprocessorASMAndroid" />
     </application>
 
 </manifest>
